# login (uutils)
# * see the repository LICENSE, README, and CONTRIBUTING files for more information

# spell-checker:ignore (libs) mangen procfs

[package]
name = "login"
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
description = "login ~ implemented as universal (cross-platform) utils, written in Rust"
default-run = "shadow"

homepage = "https://github.com/uutils/login"
repository = "https://github.com/uutils/login"
readme = "README.md"
keywords = ["login", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
rust-version = "1.70.0"
edition = "2021"

build = "build.rs"

[features]
default = ["feat_common_core"]
uudoc = []

feat_common_core = [
  "login",
  "nologin",
]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["wrap_help", "cargo"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
libc = "0.2.154"
phf = "0.13.0"
phf_codegen = "0.11.2"
rand = { version = "0.9.0", features = ["small_rng"] }
regex = "1.10.4"
tempfile = "3.10.1"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
utmpx = "0.2"
uucore = "0.2.0"
xattr = "1.3.1"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
phf = { workspace = true }
textwrap = { workspace = true }
uucore = { workspace = true }


#
login = { optional = true, version = "0.0.1", package = "uu_login", path = "src/uu/login" }
nologin = { optional = true, version = "0.0.1", package = "uu_nologin", path = "src/uu/nologin" }

[dev-dependencies]
libc = { workspace = true }
pretty_assertions = "1.4.0"
rand = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
uucore = { workspace = true, features = ["entries", "process", "signals"] }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
procfs = { version = "0.18", default-features = false }
rlimit = "0.10.1"

[build-dependencies]
phf_codegen = { workspace = true }


[[bin]]
name = "shadow"
path = "src/bin/shadow.rs"

[[bin]]
name = "uudoc"
path = "src/bin/uudoc.rs"
required-features = ["uudoc"]

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
