# login (uutils)
# * see the repository LICENSE, README, and CONTRIBUTING files for more information

# spell-checker:ignore (libs) mangen procfs

[package]
name = "shadow"
description = "shadow ~ implemented as universal (cross-platform) utils, written in Rust"
default-run = "shadow"

version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

build = "build.rs"

[features]
default = ["feat_common_core"]
uudoc = []

feat_common_core = [
  "login",
]

[workspace.package]
authors = ["uutils developers"]
categories = ["command-line-utilities"]
edition = "2024"
license = "MIT"
version = "0.0.1"
homepage = "https://github.com/uutils/login"
repository = "https://github.com/uutils/login"
readme = "README.md"
keywords = ["login", "uutils", "cross-platform", "cli", "utility"]
rust-version = "1.90.0"

[workspace.dependencies]
assert_cmd = "2.1.1"
clap = { version = "4.5.53", features = ["wrap_help", "cargo"] }
clap_complete = "4.5.61"
clap_mangen = "0.2.31"
ctor = "0.6.3"
libc = "0.2.178"
phf = "0.13.1"
phf_codegen = "0.13.1"
predicates = "3.1.3"
rand = { version = "0.9.2", features = ["small_rng"] }
regex = "1.12.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
utmpx = "0.2"
uucore = "0.2.2"
xattr = "1.6.1"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
phf = { workspace = true }
textwrap = { workspace = true }
uucore = { workspace = true }


#
login = { optional = true, version = "0.0.1", package = "uu_login", path = "src/uu/login" }

[dev-dependencies]
libc = { workspace = true }
pretty_assertions = "1.4.1"
rand = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
ctor = { workspace = true }
predicates = { workspace = true }
uucore = { workspace = true, features = ["entries", "process", "signals"] }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
procfs = { version = "0.18", default-features = false }
rlimit = "0.10.2"

[build-dependencies]
phf_codegen = { workspace = true }


[[bin]]
name = "shadow"
path = "src/bin/shadow.rs"

[[bin]]
name = "uudoc"
path = "src/bin/uudoc.rs"
required-features = ["uudoc"]

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
