[package]
name = "uu_login"
description = "login ~ (uutils) Execute a program periodically, showing output fullscreen"
repository = "https://github.com/uutils/login/tree/main/src/uu/login"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
uucore = { workspace = true, features = ["process"] }
clap = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "src/login.rs"

[[bin]]
name = "login"
path = "src/main.rs"
